k8s/counties-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counties-service
  labels:
    app: counties-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counties-service
  template:
    metadata:
      labels:
        app: counties-service
    spec:
      containers:
      - image: animals-microservices-project/counties-service:0.0.1
        imagePullPolicy: IfNotPresent #Always
        name: counties-service
        ports:
        - containerPort: 8083
        #env:
        #- name: MONGO_DATABASE
        #  valueFrom:
        #    configMapKeyRef:
        #      name: mongodb
        #      key: database-name
        #- name: MONGO_USERNAME
        #  valueFrom:
        #    secretKeyRef:
        #      name: mongodb
        #      key: database-user
        #- name: MONGO_PASSWORD
        #  valueFrom:
        #    secretKeyRef:
        #      name: mongodb
        #      key: database-password
---
apiVersion: v1
kind: Service
metadata:
  name: counties-service
  labels:
    app: counties-service
spec:
  type: NodePort #LoadBalancer
  ports:
  - port: 8083
    protocol: TCP
  selector:
    app: counties-service
