k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
  name: ingress-service
spec:
  tls:
    - hosts:
      - microservices.my
      secretName: microservices.my-secret
  rules:
  - host: microservices.my
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 8079
      - path: /animals-app
        backend:
          serviceName: animals-app
          servicePort: 8081
      - path: /city-service
        backend:
          serviceName: city-service
          servicePort: 8082
      - path: /counties-service
        backend:
          serviceName: counties-service
          servicePort: 8083
      - path: /veterinarian-service
        backend:
          serviceName: veterinarian-service
          servicePort: 8084
